--- a/mmfplanner/doc/CHANGES
+++ b/mmfplanner/doc/CHANGES
@@ -1,3 +1,9 @@
+Version 1.0.2 - UNRELEASED
+
+  Bugfixes:
+
+    - Fixed rendering on category table.
+
 Version 1.0.1 - Released 2007 November 21
 
   Enhancements:
