--- a/mmfplanner/doc/CHANGES
+++ b/mmfplanner/doc/CHANGES
@@ -1,3 +1,14 @@
+Version 1.1.1 - UNRELEASED
+
+  Enhancements:
+
+    - (none)
+
+  Bug fixes:
+
+    - (none)
+
+
 Version 1.1.0 - Released 2008 November 14
 
   Enhancements:
