--- a/mmfplanner/doc/CHANGES
+++ b/mmfplanner/doc/CHANGES
@@ -6,7 +6,7 @@ Version 1.1.1 - UNRELEASED
 
   Bug fixes:
 
-    - (none)
+    - Fixed GC#16 (Saving results in an empty file)
 
 
 Version 1.1.0 - Released 2008 November 14
