--- a/mmfplanner/doc/CHANGES
+++ b/mmfplanner/doc/CHANGES
@@ -1,3 +1,14 @@
+Version 1.1.2 - UNRELEASED
+
+  Enhancements:
+
+    - (none)
+
+  Bug fixes:
+
+    - (none)
+
+
 Version 1.1.1 - Released 2009 January 2
 
   Enhancements:
